Poetry is named poetry, not python-poetry
Huh.  I wonder why I thought I had to `pip install python-poetry`?

--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -15,7 +15,7 @@ jobs:
       run: >-
         python3 -m
         pip install
-        python-poetry
+        poetry
         --user
     - name: Build a binary wheel and a source tarball
       run: python3 -m poetry build
